# omg_cli

./: .gitignore  AGENTS.md  NOTES.md  README.md  main.py  pyproject.toml
omg_cli/: __main__.py  cli.py  constant.py  exception.py  log.py  mcp.py  utils.py
omg_cli/abstract/: __init__.py  anthropic.py  deepseek.py  none.py  openai.py  openai_legacy.py  utils.py
omg_cli/config/: __init__.py  adapter_manager.py  channel.py  history.py  manager.py  models.py  role.py  session_storage.py
omg_cli/context/: __init__.py  chat.py  command.py  event_manager.py  mcp_manager.py  meta.py  role.py  tool_manager.py
omg_cli/gui/: __init__.py  app.py
omg_cli/prompts/: __init__.py  compact.md  plan.md  role.md  role_round_reminder.md  system.md  system_prompt.py
omg_cli/shell/: __init__.py  app.py  autocomplete.py  channel_app.py  channel_widgets.py  command_definitions.py  file_completion.py  import_wizard.py  meta_app.py  role_wizard.py  utils.py  widgets.py
omg_cli/shell/styles/: __init__.py  base.py  channel.py  components.py  wizard.py
omg_cli/tool/: __init__.py  todo.py  tools.py
omg_cli/types/: __init__.py  channel.py  channel_session.py  command.py  event.py  message.py  metadata.py  skill.py  usage.py
src/omg_cli/: cli.py  log.py  mcp.py  omg.py
src/omg_cli/abstract/: __init__.py  anthropic.py  deepseek.py  none.py  null.py  openai.py  openai_legacy.py  utils.py
src/omg_cli/config/: __init__.py  adapter_manager.py  constants.py  history.py  manager.py  models.py  session_storage.py
src/omg_cli/context/: __init__.py  chat.py  command.py  compact.md  meta.py  (+2 more)
tests/: test_channel_types.py  test_config_manager.py  test_main.py  test_mcp.py  test_role_context.py  test_role_manager.py  test_skill.py
tests/abstract/: test_adapter_context.py
tests/context/: test_channel_context.py  test_thinking.py
tests/shell/: test_channel_app.py  test_channel_widgets.py  test_import_wizard.py  test_role_wizard.py
tests/storage/: test_session_storage.py
tests/tool/: test_todo.py  test_tools.py
(+21 files in other folders)
